syntax = "proto3";
option csharp_namespace = "BBDown.Core.Protobuf";

message VideoInfo {
    optional uint32 quality = 1;
    optional string format = 2;
    optional uint64 timelength = 3;
    optional uint32 videoCodecid = 4;
    repeated StreamItem streamList = 5;
    repeated DashItem dashAudio = 6;
    //杜比伴音流
    optional DolbyItem dolby = 7;
    optional DolbyItem flac = 9;
    // 是否支持投屏
    bool support_project = 10;
}

//杜比音频信息
message DolbyItem {
	optional int32 type = 1;
	//音频流
	optional DashItem audio = 2;
    bool need_vip = 3;
}

message PlayAbilityConf {
    optional bool backgroundPlayDisable = 1;
    optional bool flipDisable = 2;
    optional bool castDisable = 3;
    optional bool feedbackDisable = 4;
    optional bool subtitleDisable = 5;
    optional bool playbackRateDisable = 6;
    optional bool timeUpDisable = 7;
    optional bool playbackModeDisable = 8;
    optional bool scaleModeDisable = 9;
    optional bool likeDisable = 10;
    optional bool dislikeDisable = 11;
    optional bool coinDisable = 12;
    optional bool elecDisable = 13;
    optional bool shareDisable = 14;
    optional bool screenShotDisable = 15;
    optional bool lockScreenDisable = 16;
    optional bool recommendDisable = 17;
    optional bool playbackSpeedDisable = 18;
    optional bool definitionDisable = 19;
    optional bool selectionsDisable = 20;
    optional bool nextDisable = 21;
    optional bool editDmDisable = 22;
    optional bool smallWindowDisable = 23;
    optional bool shakeDisable = 24;
}

message ClipInfo {
    optional int32 start = 2;
    optional int32 end = 3;
    optional string toastText = 5;
}

message BusinessInfo {
    optional bool isPreview = 1;
    optional bool bp = 2;
    optional string marlinToken = 3;
    repeated ClipInfo clipInfo = 6;
}

message Event {
    optional Shake shake = 1;
}

message Shake {
    optional string file = 1;
}

message DashItem {
    uint32 id = 1;
    string base_url = 2;
    repeated string backup_url = 3;
    uint32 bandwidth = 4;
    uint32 codecid = 5;
    string md5 = 6;
    uint64 size = 7;
    string frame_rate = 8;
    string widevine_pssh = 9;
    string bilidrm_uri = 10;
}

message StreamItem {
    optional StreamInfo streamInfo = 1;
    optional DashVideo  dashVideo = 2;
    optional SegmentVideo segmentVideo = 3;
}

message StreamInfo {
    optional uint32 quality = 1;
    optional string format = 2;
    optional string description = 3;
    optional uint32 errCode = 4;
    optional StreamLimit limit = 5;
    optional bool needVip = 6;
    optional bool needLogin = 7;
    optional bool intact = 8;
    optional bool noRexcode = 9;
    optional uint64 attribute = 10;

}

message DashVideo {
    optional string baseUrl = 1;
    repeated string backupUrl = 2;
    optional uint32 bandwidth = 3;
    optional uint32 codecid = 4;
    optional string md5 = 5;
    optional uint64 size = 6;
    optional uint32 audioId = 7;
    optional bool noRexcode = 8;
    string frame_rate = 9;
    int32 width = 10;
    int32 height = 11;
    string widevine_pssh = 12;
    string bilidrm_uri = 13;
}

message SegmentVideo {
    repeated ResponseUrl segment = 1;
}

message StreamLimit {
    optional string title = 1;
    optional string uri = 2;
    optional string msg = 3;

}

message ResponseUrl {
    optional uint32 order = 1;
    optional uint64 length = 2;
    optional uint64 size = 3;
    optional string url = 4;
    repeated string backupUrl = 5;
    optional string md5 = 6;
}

message RoleAudioProto {
    // 配音列表
    repeated AudioMaterialProto audioMaterialList = 4;
}

message AudioMaterialProto {
    optional string audioId = 1;
    optional string title = 2;
    optional string edition = 3;
    optional string personName = 5;
    repeated DashItem audio = 7;
}

message PlayDubbingInfo {
    // 背景音频
    optional AudioMaterialProto backgroundAudio = 1;
    // 角色音频列表
    repeated RoleAudioProto roleAudioList = 2;
}

message PlayExtInfo {
    // 播放配音信息
    optional PlayDubbingInfo playDubbingInfo = 1;
}

message PlayViewReply {
    optional VideoInfo videoInfo = 1;
    optional PlayAbilityConf playConf = 2;
    optional BusinessInfo business = 3;
    optional Event event = 4;
    optional PlayExtInfo playExtInfo = 7;
}


